# NBody

./: Input.txt  main.cpp
Clustering/: clusterdata2.csv
Clustering/Clustering/: main.cpp
Clustering/Clustering.xcodeproj/: project.pbxproj
DistributedNBody/: Dist1.cpp  Hilbert.cpp  HilbertDist.cpp  Octree.cpp  OctreeDist.cpp  ex10000.txt  main.cpp
DistributedNBody/NBody Code/: CMakeLists.txt  README.txt  main.cpp
HPX1/: HPX_Force_Computation.cpp  ParallelOctree_BarnesHut.cpp  ParallelOctree_HilbertCurve.cpp
HPX1/HPX1/: main.cpp
HPX1/HPX1.xcodeproj/: project.pbxproj
Hilbert/Hilbert/: main.cpp
Hilbert/Hilbert.xcodeproj/: project.pbxproj
Method2_Serial/: sc1.docx
Method2_serial.xcodeproj/: project.pbxproj
NBody1/struct3/: main.cpp
NBody1/struct3.xcodeproj/: project.pbxproj
NBodyWithHPX/: BarnesHutOctree.cpp  HPX_Force_Computation.cpp  HilbertOctree.cpp  ParallelOctreeBrnesHut_With_GrainSize_Control.cpp  ParallelOctreeHilbert.cpp  ParallelOctree_BarnesHut.cpp  ParallelOctree_HilbertCurve.cpp  ParallelOctree_OpenMP.cpp
NBodyWithHPX/Method1-Failed/: ParallelOctreeBrnesHut_Without_GrainSize_Control.cpp  ParallelOctree_BarnesHut.cpp
Octree1/: Input.txt
Octree1/CreatTxt/: example.txt
Octree1/NB/: main.cpp
Octree1/NB.xcodeproj/: project.pbxproj
Octree1/Octree1.xcodeproj/: project.pbxproj
Octree1/SecondMethod/: ex10.txt  ex100.txt  ex1000.txt  ex10000.txt  ex20.txt  ex200.txt  ex2000.txt  ex5000.txt
OpenMP/: OpenMP_Force_Computation.cpp
Piano Curve/Hilbert2.xcodeproj/: project.pbxproj
Serial Code/: main.cpp
Sort1/: sor1.docx
(+70 files in other folders)
